fix link alignment at small widths in about

--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ img {
 }
 
 .list {
-	text-indent:12em;
+	text-indent:30%;
 	list-style-type:none;
 }
 
